examples/type_system/failing/101_missing_colon_let_annotation.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let x Int = 1
